// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a multi picker detail 1`] = `
<view
  style="flex:1"
>
  <view>
    <view
      style="background-color:dodgerblue;border-bottom-color:rgb(106, 182, 255);border-bottom-width:0;elevation:1px"
    >
      <view
        style="height:22px"
      />
      <view
        style="padding:10px;flex-direction:row"
      >
        <view
          style="opacity:1"
        >
          <view
            style="padding:6px;padding-left:16px;padding-right:16px;align-items:center;justify-content:center"
          >
            <text
              ellipsizemode="tail"
              style="0:[object Object];2:[object Object]"
            >
              
            </text>
          </view>
        </view>
        <text
          ellipsizemode="tail"
          numberoflines="1"
          style="font-weight:300;color:rgb(255, 255, 255);font-size:20px;flex:1"
        >
          Select Items
        </text>
      </view>
    </view>
  </view>
  <rctscrollview
    data="[object Object],[object Object]"
    initialnumtorender="10"
    maxtorenderperbatch="10"
    numcolumns="1"
    scrolleventthrottle="50"
    stickyheaderindices=""
    style="flex:1"
    updatecellsbatchingperiod="50"
    viewabilityconfigcallbackpairs=""
    windowsize="21"
  >
    <view>
      <view>
        <view
          style="opacity:1"
        >
          <view
            style="0:[object Object];1:[object Object]"
          >
            <text
              ellipsizemode="tail"
              style="color:rgb(51, 51, 51)"
            >
              Test 1
            </text>
            <view
              style="flex:1"
            />
            <text
              ellipsizemode="tail"
              style="0:[object Object];1:[object Object];2:[object Object]"
            >
              
            </text>
          </view>
        </view>
      </view>
      <view>
        <view
          style="opacity:1"
        >
          <view
            style="0:[object Object];1:[object Object]"
          >
            <text
              ellipsizemode="tail"
              style="color:rgb(51, 51, 51)"
            >
              Test 2
            </text>
            <view
              style="flex:1"
            />
            <text
              ellipsizemode="tail"
              style="0:[object Object];1:[object Object];2:[object Object]"
            >
              
            </text>
          </view>
        </view>
      </view>
    </view>
  </rctscrollview>
</view>
`;

exports[`should render a multi picker item 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "padding": 20,
        },
        Object {
          "borderBottomColor": "rgb(217, 217, 217)",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(51, 51, 51)",
        }
      }
    >
      TEST
    </Text>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
    <Icon
      allowFontScaling={false}
      name="check"
      size={20}
      style={
        Object {
          "color": "rgb(179, 179, 179)",
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`should render a multi picker item that is selected 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "padding": 20,
        },
        Object {
          "borderBottomColor": "rgb(217, 217, 217)",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(51, 51, 51)",
        }
      }
    >
      TEST
    </Text>
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
    <Icon
      allowFontScaling={false}
      name="check"
      size={20}
      style={
        Object {
          "color": "dodgerblue",
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`should render a multi picker item with no label 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
>
  <View
    style={
      Array [
        Object {
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "padding": 20,
        },
        Object {
          "borderBottomColor": "rgb(217, 217, 217)",
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(51, 51, 51)",
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    />
    <Icon
      allowFontScaling={false}
      name="check"
      size={20}
      style={
        Object {
          "color": "rgb(179, 179, 179)",
        }
      }
    />
  </View>
</TouchableOpacity>
`;
